--- a/cal-hacks/index.html
+++ b/cal-hacks/index.html
@@ -42,6 +42,7 @@
       <div class='nav'>
         <a href='#about' class='nav-item'>About</a>
         <a href='#inclusion' class='nav-item'>Inclusion</a>
+        <a href='#initiatives' class='nav-item'>Initiatives</a>
         <a href='#sponsor' class='nav-item'>Sponsor</a>
         <a href='#faq' class='nav-item'>FAQ</a>
         <a href="javascript:void(0);" id='hamburger' class="icon" onclick="toggleMobileNav()">
@@ -65,6 +66,7 @@
     <a href=''class='mobile-nav-item'></a>
     <a href='#about' onclick="toggleMobileNav()" class='mobile-nav-item'>About</a>
     <a href='#inclusion' onclick="toggleMobileNav()" class='mobile-nav-item'>Inclusion</a>
+    <a href='#initiatives' onclick="toggleMobileNav()" class='mobile-nav-item'>Initiatives</a>
     <a href='#sponsor' onclick="toggleMobileNav()" class='mobile-nav-item'>Sponsor</a>
     <a href='#faq' onclick="toggleMobileNav()" class='mobile-nav-item'>FAQ</a>
   </div>
@@ -110,6 +112,31 @@
       </p>
       <a target='_blank' href='./code-of-conduct/index.html' class='conduct'> Cal Hacks Code of Conduct </a>
       <a href='https://static.mlh.io/docs/mlh-code-of-conduct.pdf' target='_blank' class='conduct'> MLH Code of Conduct </a>
+    </div>
+
+    <div class='extra-small-buffer'>
+      <div class='node node-5' data-aos='fade-up'><img src='./assets/images/nodes/node-5.svg'/></div>
+      <div class='node node-6' data-aos='fade-up'><img src='./assets/images/nodes/node-6.svg'/></div>
+    </div>
+
+    <!-- Initiatives. -->
+    <div class='section' id='initiatives' >
+      <h2> Initiatives </h2>
+      <h3> CubStart </h3>
+      <p>
+        CubStart is a beginning hacker program to help hackathons less intimidating and more accessible for everyone! We provide a mentorship program for team building, ideation, basic hackathon skills, and technical workshops to encourage those with little or no CS experience to try out hackathons and coding!
+      </p>
+      <a target='_blank' href='https://2018.calhacks.io/signup' class='conduct'> Apply to CubStart * </a>
+      <p class='sub'>
+        * Note: Acceptance to CubStart guarantees acceptance to Cal Hacks 5.0. However, you should apply to both Cal Hacks 5.0 as well as CubStart.
+      </p>
+      <h3> Fellowship </h3>
+      <p>
+        Why do you have to stop hacking after the hackathon is over? You don’t! Cal Hacks started The Cal Hacks Fellowship, a program that hosts several hackathon teams after the hackathon to continue building their projects to whatever stages they want to take it to next stage.
+        <br/><br/>
+        If you are interested in participating in the Fellowship, be on the lookout for the "Fellowship Awards" at Cal Hacks 5.0.
+      </p>
+      <div class='fellowship'><img src='./assets/images/fellowship.png'></div>
     </div>
 
     <!-- Speakers. -->
@@ -164,11 +191,6 @@
         <div class='name'>Lorem ipsum</div>
         <div class='about'>Dolor sit amet</div>
       </div>
-    </div>
-
-    <div class='small-buffer'>
-      <div class='node node-5' data-aos='fade-up'><img src='./assets/images/nodes/node-5.svg'/></div>
-      <div class='node node-6' data-aos='fade-up'><img src='./assets/images/nodes/node-6.svg'/></div>
     </div>
 
     <!-- Sponsor. -->
