--- a/cal-hacks/index.html
+++ b/cal-hacks/index.html
@@ -48,13 +48,12 @@
         <a href="javascript:void(0);" id='hamburger' class="icon" onclick="toggleMobileNav()">
           <i class="fa fa-bars stretch"></i>
         </a>
-        <div class='nav-item apply'>Apply</div>
+        <a target='_blank' href='https://2018.calhacks.io/signup' class='nav-item apply'>Apply</a>
         <a id="mlh-trust-badge" href="https://mlh.io/seasons/na-2019/events?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2019-season&utm_content=white" target="_blank">
           <img src="https://s3.amazonaws.com/logged-assets/trust-badge/2019/mlh-trust-badge-2019-white.svg" alt="Major League Hacking 2019 Hackathon Season" style="width:100%">
         </a>
       </div>
     </div>
-
 
   </div>
 
@@ -69,6 +68,7 @@
     <a href='#initiatives' onclick="toggleMobileNav()" class='mobile-nav-item'>Initiatives</a>
     <a href='#sponsor' onclick="toggleMobileNav()" class='mobile-nav-item'>Sponsor</a>
     <a href='#faq' onclick="toggleMobileNav()" class='mobile-nav-item'>FAQ</a>
+    <a target='_blank' href='https://2018.calhacks.io/signup' class='mobile-nav-item apply'>Apply</a>
   </div>
 
   <!-- Main content. -->
@@ -80,7 +80,7 @@
       <div class='title' data-aos='fade-up'>
         <h1 class='main'> It's time for round 5.0 </h1>
         <h2 class='sub'> November 2-4, 2018 <br/> California Memorial Stadium </h2>
-        <div class='apply'> Apply now </div>
+        <a target='_blank' href='https://2018.calhacks.io/signup' class='apply'> Apply now </a>
       </div>
       <div class='ddoski' data-aos='fade-up-left' data-aos-duration=500><img src='./assets/images/ddoski.png'/></div>
       <div class='node node-1' data-aos='fade-up-right' data-aos-delay=50><img src='./assets/images/nodes/node-1.svg'/></div>
