--- a/cal-hacks/index.html
+++ b/cal-hacks/index.html
@@ -125,6 +125,7 @@
       <h3> CubStart </h3>
       <p>
         CubStart is a beginning hacker program to help hackathons less intimidating and more accessible for everyone! We provide a mentorship program for team building, ideation, basic hackathon skills, and technical workshops to encourage those with little or no CS experience to try out hackathons and coding!
+        CubStart is currently only avilable for UC Berkeley students.
       </p>
       <a target='_blank' href='https://2018.calhacks.io/signup' class='conduct'> Apply to CubStart * </a>
       <p class='sub'>
