--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Adriana Babakanian</title>
-  <meta name="description" content="">
+  <meta name="description" content="Developer, designer, & matcha enthusiast with a passion for visually informed technical logic. Feel free to browse my portfolio to get to know more about me and my work!">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css"> -->
